--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="東京海洋大学CSサークルNePP">
+        <meta name="description" content="NePPは東京海洋大学の技術系CSサークル。アプリ開発・ゲーム開発など、メンバーが興味のある分野で活動しています。入部・お問い合わせはXのDMまで。">
+        <link rel="canonical" href="https://nepp-tumsat.github.io/homepage/">
+        <!-- Open Graph -->
+        <meta property="og:title" content="NePP - 東京海洋大学CSサークル">
+        <meta property="og:description" content="NePPは東京海洋大学の技術系CSサークル。アプリ開発・ゲーム開発など、メンバーが興味のある分野で活動しています。">
+        <meta property="og:url" content="https://nepp-tumsat.github.io/homepage/">
+        <meta property="og:image" content="https://nepp-tumsat.github.io/homepage/img/ogp.png">
+        <meta property="og:type" content="website">
+        <meta property="og:locale" content="ja_JP">
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="NePP - 東京海洋大学CSサークル">
+        <meta name="twitter:description" content="NePPは東京海洋大学の技術系CSサークル。アプリ開発・ゲーム開発など、メンバーが興味のある分野で活動しています。">
+        <meta name="twitter:image" content="https://nepp-tumsat.github.io/homepage/img/ogp.png">
         <!-- reset.css ress -->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
         <link rel="stylesheet" href="style.css">
@@ -38,13 +51,13 @@
         <div id="main">
             <picture>
                 <source media="(max-width: 600px)" srcset="./img/main-sp.jpg" />
-                <img src="./img/main-pc.jpg" alt="">
+                <img src="./img/main-pc.jpg" alt="NePP 東京海洋大学CSサークルのメインビジュアル">
             </picture>
         </div>
 
         <!-- about -->
         <section id="about" class="wrapper">
-            <h2 class="sec-titel">About</h2>
+            <h2 class="sec-title">About</h2>
             <ul>
                 <li>東京海洋大生による技術系サークルです
                 </li>
